--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     }
   ],
   "main": "lib/gulp-shot",
+  "preferGlobal": "true",
+  "bin": {
+    "filesearch" : "lib/filesearch.js"
+  },
   "engines": {
     "node": ">= 0.8.0"
   },
