--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "main": "lib/gulp-shot",
   "preferGlobal": "true",
   "bin": {
-    "filesearch" : "lib/filesearch.js"
+    "filesearch": "lib/gulp-shot.js"
   },
   "engines": {
     "node": ">= 0.8.0"
@@ -35,7 +35,8 @@
     "grunt-contrib-jshint": "~0.6.4",
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt": "~0.4.2"
+    "grunt": "~0.4.2",
+    "commander": "~2.1.0"
   },
   "keywords": []
 }
