--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-shot",
   "description": "A simple way to kick start gulp based web app projects",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "homepage": "https://github.com/bernardog/gulp-shot",
   "author": {
     "name": "Bernardo Gurgel",
@@ -23,7 +23,7 @@
   "main": "lib/gulp-shot",
   "preferGlobal": "true",
   "bin": {
-    "filesearch": "lib/gulp-shot.js"
+    "gulpshot": "lib/gulp-shot.js"
   },
   "engines": {
     "node": ">= 0.8.0"
