--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
   "scripts": {
     "test": "grunt nodeunit"
   },
+  "dependencies": {
+    "commander": "~2.1.0",
+    "ncp": "~0.5.0"
+  },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.6.4",
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt": "~0.4.2",
-    "commander": "~2.1.0"
+    "grunt": "~0.4.2"
   },
   "keywords": []
 }
