Update author's name

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "homepage": "https://github.com/bernardog/gulp-shot",
   "author": {
-    "name": "Bernardo Gurgel",
+    "name": "Bernardo Gurgel Filho",
     "email": "bernardogfilho@gmail.com"
   },
   "repository": {
