Adding `gulpfriendly` keyword
Adding keyword so module gets added to http://gulpjs.com/plugins/
Converted `preferGlobal` to Boolean so package.json should now pass http://package-json-validator.com/ validator.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     }
   ],
   "main": "lib/gulp-shot",
-  "preferGlobal": "true",
+  "preferGlobal": true,
   "bin": {
     "gulpshot": "lib/gulp-shot.js"
   },
@@ -41,5 +41,7 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt": "~0.4.2"
   },
-  "keywords": []
+  "keywords": [
+    "gulpfriendly"  
+  ]
 }
